--- a/inc/top_menu.html
+++ b/inc/top_menu.html
@@ -1,5 +1,4 @@
-    <!-- header -->
-
+  
         <div class="wrap">
             <h1 class="logo_box"><a href="/" class="logo">주식회사 하이쎈</a></h1>
             <button type="button" class="menu_open">메뉴열기</button>
@@ -16,17 +15,17 @@
                             <li class="depth_item depth1_item has"><a class="depth_text depth1_text" href="#">회사소개</a>
                                 <div class="depth depth2">
                                     <ul class="depth_list depth2_list">
-                                        <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">인사말</a></li>
+                                        <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="/about.html">인사말</a></li>
                                         <!-- <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">연혁</a></li> -->
-                                        <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">인증서</a></li>
-                                        <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">오시는 길</a></li>
+                                        <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="/certi.html">인증서</a></li>
+                                        <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="location.html">오시는 길</a></li>
                                     </ul>
                                 </div>
                             </li>
                             <li class="depth_item depth1_item has"><a class="depth_text depth1_text" href="#">제품소개</a>
                                 <div class="depth depth2">
                                     <ul class="depth_list depth2_list">
-                                        <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">하이젠모터</a></li>
+                                        <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="product_1.html">하이젠모터</a></li>
                                         <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">ABB</a></li>
                                         <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">윌로펌프</a></li>
                                         <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">그런포스펌프</a></li>
@@ -74,3 +73,6 @@
             </div>
             <!-- //전체 상단 메뉴 -->
         </div>
+
+
+        
