페이지 추가수정 완료 최종

--- a/inc/footer.html
+++ b/inc/footer.html
@@ -20,10 +20,10 @@
     <div class="footer_bot">
         <div class="linkbox">
             <ul>
-                <li><a href="#" target="_blank">사업자정보확인</a></li>
-                <li><a href="#">개인정보처리방침</a></li>
-                <li><a href="#">이메일무단수집거부</a></li>
-                <li><a href="#">문의하기</a></li>
+                <li><a href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=6068168689" target="_blank">사업자정보확인</a></li>
+                <li><a href="/policy.html">개인정보처리방침</a></li>
+                <li><a href="/email.html">이메일무단수집거부</a></li>
+                <li><a href="/contactus.html">문의하기</a></li>
             </ul>
         </div>
         <div class="corp_info">
