--- a/product_3.html
+++ b/product_3.html
@@ -45,9 +45,9 @@
         <h2 class="page_name">제품소개</h2>
         <div class="path_wrap">
             <ul class="path_list">
-                <li class="path_item active"><a class="path_text" href="/product_1.html"><span>하이젠모터</span></a></li>
+                <li class="path_item "><a class="path_text" href="/product_1.html"><span>하이젠모터</span></a></li>
                 <li class="path_item"><a class="path_text" href="/product_2.html"><span>ABB</span></a></li>
-                <li class="path_item"><a class="path_text" href="/product_3.html"><span>윌로펌프</span></a></li>
+                <li class="path_item  active"><a class="path_text" href="/product_3.html"><span>윌로펌프</span></a></li>
                 <li class="path_item"><a class="path_text" href="/product_4.html"><span>그런포스펌프</span></a></li>
                 <li class="path_item"><a class="path_text" href="/product_5.html"><span>데스미펌프</span></a></li>
             </ul>
@@ -58,8 +58,8 @@
     <!-- sub content -->
     <div id="content">
         <div class="cont_head">
-            <div class="subject">HIGEN MOTOR</div>
-            <div class="title">하이젠모터</div>
+            <div class="subject">Wilo</div>
+            <div class="title">윌로펌프</div>
         </div>
         <!-- 제품 -->
         <div class="cont_body">
