페이지 추가수정 완료 최종

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <div class="top_bx">
                     <div class="main_tit" data-aos="fade-right" data-aos-duration="600" data-aos-anchor-placement="center-bottom">
                         <span>NEWS</span>
-                        <strong>iM투자파트너스의<br/>최신 소식을 전해드립니다.</strong>
+                        <strong>하이쎈의<br/>최신 소식을 전해드립니다.</strong>
                     </div>
                     <div class="main_btn" data-aos="fade-left" data-aos-duration="600" >
                         <a href="../news/list.php" class="black"><span>View more</span></a>
