--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="description" content="하이쎈 기업 사이트">
-    <meta name="keywords" content="산업통합시스템 선도기업, 모터, 선박, 하이쎈, hissen">
+    <meta name="description" content="에이치비에스 기업 사이트">
+    <meta name="keywords" content="산업통합시스템 선도기업, 모터, 선박, 에이치비에스, hissen">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="하이쎈">
+    <meta property="og:site_name" content="에이치비에스">
     <meta property="og:url" content="#">
-    <meta property="og:title" content="하이쎈">
+    <meta property="og:title" content="에이치비에스">
     <meta property="og:description" content="산업통합시스템 선도기업">
     <meta property="og:image" content="/img/openGraph.jpg">
     
@@ -30,7 +30,7 @@
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <title>주식회사 하이쎈</title>
+    <title>주식회사 에이치비에스</title>
 </head>
 <body data-top="no-top" >
     <!-- header -->
@@ -50,7 +50,7 @@
                         <span class="change">ALL FOR ONE, ONE FOR ALL</span>
                         <span class="change">Professionalism & Passion</span>
                     </div>
-                    <div class="slogan">산업 통합 시스템 선도기업, 하이쎈</div>
+                    <div class="slogan">산업 통합 시스템 선도기업, 에이치비에스</div>
                 </div>
                 <ul class="slide_paging">
                     <li class="active on">
@@ -94,7 +94,7 @@
         <!-- Cooperative Brand -->
         <div class="sec02">
             <div class="brand_slogan waypoint">Cooperative Brand</div>
-            <div class="brand_text waypoint">하이쎈과 함께하는 브랜드<br />그 이상의 가치를 연결하고자 합니다...</div>
+            <div class="brand_text waypoint">에이치비에스과 함께하는 브랜드<br />그 이상의 가치를 연결하고자 합니다...</div>
             <div class="mask_text type1 waypoint">
                 <span class="zoom_circle zoom_circle1 on"></span>
                 <span class="zoom_circle zoom_circle2"></span>
@@ -201,7 +201,7 @@
                 <div class="top_bx">
                     <div class="main_tit" data-aos="fade-right" data-aos-duration="600" data-aos-anchor-placement="center-bottom">
                         <span>NEWS</span>
-                        <strong>하이쎈의<br/>최신 소식을 전해드립니다.</strong>
+                        <strong>에이치비에스의<br/>최신 소식을 전해드립니다.</strong>
                     </div>
                     <div class="main_btn" data-aos="fade-left" data-aos-duration="600" >
                         <a href="../news/list.php" class="black"><span>View more</span></a>
@@ -372,7 +372,7 @@
         <div class="sec05 waypoint on">
             <div class="bg"></div>
             <a href="#">
-                <div class="title">하이쎈<br> 쇼핑몰</div>
+                <div class="title">에이치비에스<br> 쇼핑몰</div>
                 <div class="link"><span>HISSEN SHOP</span></div>
             </a>
         </div>
