--- a/location.html
+++ b/location.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="description" content="하이쎈 기업 사이트">
-    <meta name="keywords" content="산업통합시스템 선도기업, 모터, 선박, 하이쎈, hissen">
+    <meta name="description" content="에이치비에스 기업 사이트">
+    <meta name="keywords" content="산업통합시스템 선도기업, 모터, 선박, 에이치비에스, hissen">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="하이쎈">
+    <meta property="og:site_name" content="에이치비에스">
     <meta property="og:url" content="#">
-    <meta property="og:title" content="하이쎈">
+    <meta property="og:title" content="에이치비에스">
     <meta property="og:description" content="산업통합시스템 선도기업">
     <meta property="og:image" content="/img/openGraph.jpg">
     
@@ -26,7 +26,7 @@
     <script src="/js/swiper.min.js"></script>
     <script src="/js/slick1.8.1.min.js"></script>
     <script src="/js/common.js"></script>
-    <title>주식회사 하이쎈</title>
+    <title>주식회사 에이치비에스</title>
    
 </head>
 <body data-top="no-top">
@@ -61,11 +61,11 @@
         </div>
         <div class="inner_wrap">
             <div class="conbox">
-                <div class="location_nm">하이쎈 부산 본사</div>
+                <div class="location_nm">에이치비에스 부산 본사</div>
                 <dl class="location_info">
                     <div class="dl_line">
                         <dt>A.</dt>
-                        <dd>부산광역시 사상구 새벽로 210(괘법동) 하이쎈(주)<br>210, Saebyeok-ro, Sasang-gu, Busan, Republic of Korea</dd>
+                        <dd>부산광역시 사상구 새벽로 210(괘법동) 에이치비에스(주)<br>210, Saebyeok-ro, Sasang-gu, Busan, Republic of Korea</dd>
                     </div>
                     <div class="dl_line">
                         <dt>T.</dt>
