스타일  수정

--- a/contactus.html
+++ b/contactus.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="description" content="에이치비에스 기업 사이트">
-    <meta name="keywords" content="산업통합시스템 선도기업, 모터, 선박, 에이치비에스, hissen">
+    <meta name="keywords" content="산업통합시스템 선도기업, 모터, 선박, 에이치비에스, hbs">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="에이치비에스">
@@ -16,7 +16,7 @@
     <meta property="og:image" content="/img/openGraph.jpg">
     
     <!-- style -->
-    <link rel="shortcut icon" href="/img/favicon_hissen.png">
+    <link rel="shortcut icon" href="/img/favicon_hbs.png">
     <link rel="icon" href="/img/favicon_yuhancare.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/swiper.min.css">
     <link rel="stylesheet" href="/css/contents.css">
@@ -124,7 +124,7 @@
                                         <div class="text">제 1조 총칙</div>
                                         <ol>
                                             <li><i>①</i> 개인정보란 생존하는 개인에 관한 정보로서 당해 정보에 포함되어 있는 성명, 생년월일 등의 사항에 의하여 당해 개인을 식별할 수 있는 부호, 문자, 음성, 음향, 영상 등의 정보(당해 정보만으로는 특정 개인을 식별할 수 없더라도 다른 정보와 용이하게 결합하여 식별할 수 있는 것을 포함합니다)를 말합니다.</li>
-                                            <li><i>②</i> 에이치비에스( 웹사이트(www.hissenmotor.com)를 운영하는 에이치비에스( (이하 ‘회사’)는 귀하의 개인정보보호를 매우 중요시하며, 『개인정보보호법』 등 관련법령을 준수하고 있습니다.</li>
+                                            <li><i>②</i> 에이치비에스( 웹사이트(www.hbsmotor.com)를 운영하는 에이치비에스( (이하 ‘회사’)는 귀하의 개인정보보호를 매우 중요시하며, 『개인정보보호법』 등 관련법령을 준수하고 있습니다.</li>
                                             <li><i>③</i> ‘회사’는 본 개인정보처리방침을 통하여 귀하께서 제공하시는 개인정보가 어떠한 용도와 방식으로 이용되고 있으며 개인정보보호를 위해 어떠한 조치가 취해지고 있는지 알려드립니다.</li>
                                             <li><i>④</i> ‘회사’는 개인정보처리방침을 홈페이지 첫 화면에 공개함으로써 귀하께서 언제나 용이하게 보실 수 있도록 조치하고 있습니다.</li>
                                             <li><i>⑤</i> ‘회사’는 개인정보처리방침의 지속적인 개선을 위하여 개인정보처리방침을 개정하는데 필요한 절차를 정하고 있습니다.</li>
@@ -417,9 +417,9 @@
                                                         </tr>
                                                         <tr>
                                                             <td><p>담당자 메일주소</p></td>
-                                                            <td><p>hissen@hissenmotor.com</p></td>
-                                                            <td><p>hissen@hissenmotor.com</p></td>
-                                                            <td><p>hissen@hissenmotor.com</p></td>
+                                                            <td><p>hbs@hbsmotor.com</p></td>
+                                                            <td><p>hbs@hbsmotor.com</p></td>
+                                                            <td><p>hbs@hbsmotor.com</p></td>
                                                         </tr>
                                                         </tbody>
                                                     </table>
