--- a/location.html
+++ b/location.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="description" content="에이치비에스 기업 사이트">
-    <meta name="keywords" content="산업통합시스템 선도기업, 모터, 선박, 에이치비에스, hissen">
+    <meta name="keywords" content="산업통합시스템 선도기업, 모터, 선박, 에이치비에스, hbs">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="에이치비에스">
@@ -16,7 +16,7 @@
     <meta property="og:image" content="/img/openGraph.jpg">
     
     <!-- style -->
-    <link rel="shortcut icon" href="/img/favicon_hissen.png">
+    <link rel="shortcut icon" href="/img/favicon_hbs.png">
     <link rel="icon" href="/img/favicon_yuhancare.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/swiper.min.css">
     <link rel="stylesheet" href="/css/contents.css">
@@ -73,7 +73,7 @@
                     </div>
                     <div class="dl_line">
                         <dt>E.</dt>
-                        <dd>hissen@hissenmotor.com</dd>
+                        <dd>hbs@hbsmotor.com</dd>
                     </div>
                 </dl>
                 <div class="map">
