--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="description" content="에이치비에스 기업 사이트">
-    <meta name="keywords" content="산업통합시스템 선도기업, 모터, 선박, 에이치비에스, hissen">
+    <meta name="keywords" content="산업통합시스템 선도기업, 모터, 선박, 에이치비에스, hbs">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="에이치비에스">
@@ -16,7 +16,7 @@
     <meta property="og:image" content="/img/openGraph.jpg">
     
     <!-- style -->
-    <link rel="shortcut icon" href="/img/favicon_hissen.png">
+    <link rel="shortcut icon" href="/img/favicon_hbs.png">
     <link rel="icon" href="/img/favicon_yuhancare.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/swiper.min.css">
     <link rel="stylesheet" href="/css/contents.css">
@@ -152,7 +152,7 @@
                 
                 <div class="youtube_box waypoint">
                     <div class="flexbox">
-                        <div class="media_nm"><span>hissen</span><br />PRODUCT</div>
+                        <div class="media_nm"><span>hbs</span><br />PRODUCT</div>
                         <a href="/media/youtube" class="go_media">상품 더보기</a>
                     </div>
                     <div class="youtube_conbox">
@@ -373,7 +373,7 @@
             <div class="bg"></div>
             <a href="#">
                 <div class="title">에이치비에스<br> 쇼핑몰</div>
-                <div class="link"><span>HISSEN SHOP</span></div>
+                <div class="link"><span>hbs SHOP</span></div>
             </a>
         </div>
         <!-- //shop -->
