하단정보  수정

--- a/inc/footer.html
+++ b/inc/footer.html
@@ -20,22 +20,22 @@
     <div class="footer_bot">
         <div class="linkbox">
             <ul>
-                <li><a href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=6068168689" target="_blank">사업자정보확인</a></li>
+                <li><a href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=7058701099" target="_blank">사업자정보확인</a></li>
                 <li><a href="/policy.html">개인정보처리방침</a></li>
                 <li><a href="/email.html">이메일무단수집거부</a></li>
                 <li><a href="/contactus.html">문의하기</a></li>
             </ul>
         </div>
         <div class="corp_info">
-            <span>대표이사 : 아무개</span>
-            <span>사업자등록번호 : 606-81-68689</span>
-            <span>주소 : 부산광역시 사상구 새벽로 210(괘법동) 하이쎈(주)</span>
+            <span>대표이사 : 배수명</span>
+            <span>사업자등록번호 : 705-87-01099</span>
+            <span>주소 : 부산광역시 사상구 괘감로 37, 1동 119호, 121호(괘법동, 산업용품유통상가)</span>
         </div>
         <div class="corp_info">
             <span>대표번호 : 051-328-3118</span>
             <span>FAX : 051-327-3118</span>
-            <span>이메일 : hissen@hissenmotor.com</span>
+            <span>이메일 : hbs@hbsolution.kr</span>
         </div>
-        <p class="copyright">ⓒ 2024 HISSEN All Rights Reserved</p>
+        <p class="copyright">ⓒ 2024 HBS All Rights Reserved</p>
     </div>
 </div>
