--- a/location.html
+++ b/location.html
@@ -65,11 +65,11 @@
                 <dl class="location_info">
                     <div class="dl_line">
                         <dt>A.</dt>
-                        <dd>부산광역시 사상구 새벽로 210(괘법동) 에이치비에스(주)<br>210, Saebyeok-ro, Sasang-gu, Busan, Republic of Korea</dd>
+                        <dd>부산광역시 사상구 괘감로 37, 1동 119호, 121호(괘법동, 산업용품유통상가) 에이치비에스(주)<br>37, Gwaegam-ro, Sasang-gu, Busan, Republic of Korea</dd>
                     </div>
                     <div class="dl_line">
                         <dt>T.</dt>
-                        <dd>051-328-3118</dd>
+                        <dd>051-319-3111</dd>
                     </div>
                     <div class="dl_line">
                         <dt>E.</dt>
@@ -77,7 +77,7 @@
                     </div>
                 </dl>
                 <div class="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.874924176679!2d128.98190077635147!3d35.15973995844387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568c1ded1cb7d1d%3A0xc60d72b565450a8d!2z7ZWY7J207I6IKOyjvCk!5e0!3m2!1sko!2skr!4v1730962341742!5m2!1sko!2skr" width="1200" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1630.9494543952994!2d128.97856713888646!3d35.15914183604683!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568c1dcfddfba5f%3A0x7e2f06802463097d!2z7JeQ7J207LmY67mE7JeQ7IqkKOyjvCk!5e0!3m2!1sko!2skr!4v1732152391451!5m2!1sko!2skr" width="1200" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
             
