--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                     <div class="ceo_box">
-                        <div class="ceo_nm">에이치비에스 대표이사 <span>손 정 수</span></div>
+                        <div class="ceo_nm">에이치비에스 대표이사 <span>배 수 영</span></div>
                     </div>
                 </div>
 
@@ -105,7 +105,7 @@
                     </div>
 
                     <div class="ceo_box">
-                        <div class="ceo_nm">에이치비에스 대표이사 <span>손 정 수</span></div>
+                        <div class="ceo_nm">에이치비에스 대표이사 <span>배 수 영</span></div>
                     </div>
                 </div>
 
