--- a/inc/footer.html
+++ b/inc/footer.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
         <div class="corp_info">
-            <span>대표이사 : 배수명</span>
+            <span>대표이사 : 배수영</span>
             <span>사업자등록번호 : 705-87-01099</span>
             <span>주소 : 부산광역시 사상구 괘감로 37, 1동 119호, 121호(괘법동, 산업용품유통상가)</span>
         </div>
