이미지수정

--- a/index.html
+++ b/index.html
@@ -101,14 +101,20 @@
                 <span class="zoom_circle zoom_circle3"></span>
                 <span class="zoom_circle zoom_circle4"></span>
                 <span class="zoom_circle zoom_circle5"></span>
+                <span class="zoom_circle zoom_circle6"></span>
+                <span class="zoom_circle zoom_circle7"></span>
+                <span class="zoom_circle zoom_circle8"></span>
             </div>
             <div class="conbox waypoint">
                 <div class="tab_box">
-                    <button type="button" class="brand_tab active">하이젠 모터</button>
+                    <button type="button" class="brand_tab active">효성 모터</button>
                     <button type="button" class="brand_tab">ABB</button>
                     <button type="button" class="brand_tab">윌로펌프</button>
                     <button type="button" class="brand_tab">그런포스펌프</button>
                     <button type="button" class="brand_tab">데스미펌프</button>
+                    <button type="button" class="brand_tab">DANFOSS</button>
+                    <button type="button" class="brand_tab">감속기</button>
+                    <button type="button" class="brand_tab">자동제어판넬</button>
                 </div>
                 <div class="matchbox">
                     <div class="matchtext active">
