--- a/location.html
+++ b/location.html
@@ -65,7 +65,7 @@
                 <dl class="location_info">
                     <div class="dl_line">
                         <dt>A.</dt>
-                        <dd>부산광역시 사상구 괘감로 37, 1동 119호, 121호(괘법동, 산업용품유통상가) 에이치비에스(주)<br>37, Gwaegam-ro, Sasang-gu, Busan, Republic of Korea</dd>
+                        <dd>부산광역시 사상구 괘감로 37, 1동 119호 ~ 121호(괘법동, 산업용품유통상가) 에이치비에스(주)<br>37, Gwaegam-ro, Sasang-gu, Busan, Republic of Korea</dd>
                     </div>
                     <div class="dl_line">
                         <dt>T.</dt>
